--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="ON" />
+        android:text="TERMINAR" />
 
     <Button
         android:id="@+id/buttonOff"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/buttonOn"
         android:layout_alignParentRight="true"
-        android:text="OFF" />
+        android:text="EMPEZAR" />
 
     <TextView
         android:id="@+id/sensorView1"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/sensorView0"
         android:layout_centerHorizontal="true"
-        android:text="Sensor 1 Voltage = ????"
+        android:text="Distancia Ultrasonico 1 = ????"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/sensorView1"
         android:layout_centerHorizontal="true"
-        android:text="Sensor 2 Voltage = ????"
+        android:text="Distancia Ultrasonico 2 = ????"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/sensorView2"
         android:layout_centerHorizontal="true"
-        android:text="Sensor 3 Voltage = ????"
+        android:text="Estado de funcion          = ????"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -74,7 +74,15 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="196dp"
-        android:text="Sensor 0 Voltage = ????"
+        android:text="Sensor de Linea               = ????"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tracking"
+        android:id="@+id/buttonTracking"
+        android:layout_alignTop="@+id/buttonOn"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
